Added HTML structural tags

--- a/UI/root.html
+++ b/UI/root.html
@@ -1,8 +1,21 @@
-<h2>Hi There, I am Sailbot. This is my user interface!</h2>
-<a href='/test'>/link to nowhere</a><br />
+<html>
+	<head>
+		<title> UBC Sailbot 2012</title>
+	</head>
 
-<form method="POST" action="/send">
-<label>Insert your name: </label>
-<input type="text" name="your_name"/>
-<input type="submit" value="Send"/>
-</form>
+	<body>
+		<div title="header">
+			<h2>Hi There, I am Sailbot. This is my user interface!</h2>
+		</div>
+
+		<div title="content">
+			<a href='/test'>/link to nowhere</a><br />
+
+			<form method="POST" action="/send">
+			<label>Insert your name: </label>
+			<input type="text" name="your_name"/>
+			<input type="submit" value="Send"/>
+			</form>
+		</div>
+	</body>
+</html>
