--- a/UI/root.html
+++ b/UI/root.html
@@ -1,21 +1,10 @@
-<html>
-	<head>
-		<title> UBC Sailbot 2012</title>
-	</head>
+<h2>Hi There, I am Sailbot. This is my user interface!</h2>
+<a href='/test'>/link to nowhere</a><br />
 
-	<body>
-		<div title="header">
-			<h2>Hi There, I am Sailbot. This is my user interface!</h2>
-		</div>
+<form method="POST" action="/send">
+<label>Insert your name: </label>
+<input type="text" name="your_name"/>
+<input type="submit" value="Send"/>
+</form>
 
-		<div title="content">
-			<a href='/test'>/link to nowhere</a><br />
-
-			<form method="POST" action="/send">
-			<label>Insert your name: </label>
-			<input type="text" name="your_name"/>
-			<input type="submit" value="Send"/>
-			</form>
-		</div>
-	</body>
-</html>
+<H1 ALIGN=center><IMG SRC="yatch_club_map.jpg" ALT="Welcome to XYZ Company"></H1>
